--- a/index.html
+++ b/index.html
@@ -1,109 +1,396 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>17Live 三星彩中獎機率計算器｜正式版</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>台灣 539 機率分析器 v1.0</title>
 <style>
-  :root{
-    --bg:#0f172a;
-    --card:#111827;
-    --muted:#94a3b8;
-    --text:#e5e7eb;
-    --accent:#22d3ee;
-    --accent2:#60a5fa;
-  }
-  body{margin:0;padding:16px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial;background:linear-gradient(180deg,#0b1220,#0f172a 60%);color:var(--text)}
-  h1{font-size:22px;margin:0 0 4px}
-  .sub{color:var(--muted);font-size:13px;margin-bottom:8px}
-  .stats{font-size:13px;color:var(--accent2);margin-bottom:10px;line-height:1.4}
-  .card{background:#111827cc;padding:14px;border-radius:16px;margin-bottom:12px}
-  input,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(148,163,184,.25);background:#0b1020;color:var(--text)}
-  .btn{padding:10px 12px;border-radius:8px;border:0;background:linear-gradient(135deg,var(--accent),var(--accent2));color:#081018;font-weight:700;cursor:pointer}
-  .btn.sec{background:#0b1020;color:var(--text);border:1px solid rgba(148,163,184,.25)}
-  .row{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
-  .list li{margin:3px 0;list-style:none}
-  .divider{border-top:1px dashed rgba(148,163,184,.4);margin:2px 0}
-  .mono{white-space:pre-wrap;font-family:ui-monospace,Consolas,monospace}
+body{
+  background:#0f172a;
+  color:#e5e7eb;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial;
+  margin:0;
+  padding:16px;
+}
+.card{
+  background:#111827cc;
+  padding:14px;
+  border-radius:16px;
+  margin-bottom:12px;
+  box-shadow:0 10px 25px rgba(15,23,42,.6);
+}
+.btn{
+  padding:8px 12px;
+  border-radius:999px;
+  border:0;
+  background:linear-gradient(135deg,#22d3ee,#60a5fa);
+  color:#020617;
+  font-weight:700;
+  cursor:pointer;
+}
+.btn.sec{
+  background:#020617;
+  color:#e5e7eb;
+  border:1px solid rgba(148,163,184,.25);
+}
+input,textarea,select{
+  width:100%;
+  padding:10px;
+  border-radius:10px;
+  border:1px solid rgba(148,163,184,.25);
+  background:#020617;
+  color:#e5e7eb;
+  box-sizing:border-box;
+}
+.row{
+  display:flex;
+  flex-wrap:wrap;
+  gap:10px;
+  align-items:center;
+  margin-top:4px;
+}
+.divider{
+  border-top:1px dashed rgba(148,163,184,.4);
+  margin:2px 0;
+}
+.mono{
+  white-space:pre-wrap;
+  font-family:ui-monospace,Consolas,monospace;
+}
+
+.split2{
+  display:flex;
+  gap:8px;
+}
+.split2>div{
+  flex:1;
+  display:flex;
+  flex-direction:column;
+}
+
+.chip{
+  background:#1e293b;
+  border-radius:12px;
+  padding:6px 8px;
+  font-size:13px;
+  border:1px solid rgba(148,163,184,.35);
+  box-shadow:0 4px 10px rgba(15,23,42,.8);
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:4px;
+}
+.chip.rankTop{
+  border-color:#38bdf8;
+  box-shadow:0 0 0 1px rgba(56,189,248,.4),0 10px 25px rgba(15,23,42,.9);
+  background:radial-gradient(circle at top,#0ea5e944,#020617);
+}
+.chip span.label{color:#e5e7eb;}
+.chip span.value{font-weight:600;color:#7dd3fc;}
+/* 命中紀錄表 */
+.hit-table-wrapper{
+  max-height:260px;
+  overflow:auto;
+  border-radius:10px;
+  border:1px solid rgba(148,163,184,.4);
+  background:#020617;
+}
+.hit-table{
+  width:100%;
+  border-collapse:collapse;
+  font-size:12px;
+  min-width:480px;
+}
+.hit-table th,
+.hit-table td{
+  padding:6px 8px;
+  border-bottom:1px solid rgba(30,64,175,.5);
+}
+.hit-table th{
+  color:#bfdbfe;
+  font-weight:600;
+}
+.hit-table tr:hover{
+  background:#0b1120;
+}
 </style>
 </head>
 <body>
-<h1>17Live 三星彩中獎機率計算器</h1>
-<div class="stats" id="stats">📊 目前共有 17 期（含 0 期本機新增）<br>最新一期：6 5 10</div>
-<div class="sub">建議預設：r = 0.80、SP 開啟（兼顧第13期命中與整體穩定）</div>
+
+<h1>台灣 539 中獎機率計算器</h1>
+
+<div id="stats" style="color:#60a5fa;font-size:13px;margin-bottom:8px"></div>
 
 <div class="card">
-  <h3>我的下注</h3>
-  <textarea id="bets" placeholder="每行一組，例如：
-1 4 6
-1 9 2
-4 6 9"></textarea>
-</div>
-
-<div class="card">
-  <label>新增最新一期（三顆，以空格分隔）</label>
-  <input id="latest" placeholder="例如：2 5 7">
+  <label>衰減權重 r</label>
   <div class="row">
-    <button class="btn" onclick="appendLatest()">＋ 加入到歷史（本機）</button>
-    <button class="btn sec" onclick="clearAdded()">重置本機新增</button>
-  </div>
-  <label style="margin-top:10px">衰減權重 r</label>
-  <div class="row">
+    <input id="r" type="number" step="0.01" value="0.8" min="0" max="1" style="max-width:100px">
     <button class="btn sec" onclick="setR(0.6)">r=0.6</button>
     <button class="btn sec" onclick="setR(0.8)">r=0.8</button>
     <button class="btn sec" onclick="setR(0.95)">r=0.95</button>
   </div>
-  <label style="margin-top:10px">streak penalty</label>
-  <div class="row">
-    <label><input type="checkbox" id="streak" checked> 開啟</label>
+
+  <div class="row" style="margin-top:8px">
+    <label class="switch"><input type="checkbox" id="streak" checked> 🔁 熱號連開懲罰</label>
+    <label class="switch"><input type="checkbox" id="avoid" checked> 避免重複上一期</label>
   </div>
-  <button class="btn" style="margin-top:10px" onclick="run()">計算中獎機率</button>
+
+  <label style="margin-top:8px">我的下注（五顆一組，每行一組）</label>
+  <textarea id="bets" placeholder="例如：1 2 13 24 35"></textarea>
+
+  <div class="row">
+    <button class="btn" onclick="run()">計算中獎機率</button>
+  </div>
+
+  <div class="divider"></div>
+  <label>新增最新一期（五顆）</label>
+  <input id="latest" placeholder="例如：3 11 22 27 38">
+  <div class="row">
+    <button class="btn" onclick="appendLatest()">＋ 加入到歷史</button>
+    <button class="btn sec" onclick="clearAdded()">重置本機新增</button>
+  </div>
 </div>
 
 <div class="card">
-  <h3>交叉推薦（Top1~10）</h3>
-  <ul id="ensemble" class="list mono">
-    <li>1 4 6  →  3.52%</li><div class="divider"></div>
-    <li>2 5 8  →  3.20%</li><div class="divider"></div>
-    <li>3 7 9  →  3.05%</li><div class="divider"></div>
-    <li>4 6 8  →  2.91%</li><div class="divider"></div>
-    <li>1 5 9  →  2.74%</li><div class="divider"></div>
-    <li>2 4 10 →  2.60%</li><div class="divider"></div>
-    <li>3 6 9  →  2.48%</li><div class="divider"></div>
-    <li>4 7 10 →  2.36%</li><div class="divider"></div>
-    <li>1 8 9  →  2.25%</li><div class="divider"></div>
-    <li>2 5 10 →  2.13%</li>
-  </ul>
+  <h3>🔢 各號碼機率分佈（依權重排序）</h3>
+  <div style="font-size:12px;color:#9ca3af">單號平均理論值：約 12.82%</div>
+  <div id="singleTop" class="mono split2" style="margin-top:6px;">尚未計算</div>
 </div>
 
+<div class="card">
+  <h3>💡 推薦組合 Top10</h3>
+  <div style="font-size:12px;color:#9ca3af">理論機率：1 / C(39,5) ≈ 0.0001737%</div>
+  <div id="toplist" class="mono split2"></div>
+</div>
+
+<div class="card">
+  <h3>我的下注結果</h3>
+  <div id="myres" class="mono" style="font-size:13px;color:#94a3b8">尚未計算</div>
+</div>
+
+<div class="card">
+  <h3>📈 命中紀錄表（TopN 回測）</h3>
+  <div style="font-size:12px;color:#9ca3af">使用 Top5 回測</div>
+  <div id="hitSummary" style="font-size:12px;color:#9ca3af;margin-bottom:4px">尚未回測</div>
+  <div class="hit-table-wrapper">
+    <table class="hit-table" id="hitTable">
+      <thead>
+        <tr>
+          <th>期數</th><th>開獎號碼</th><th>最佳命中</th><th>命中組合</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</div>
 <script>
-let baseHistory = [
- [7,5,6],[9,10,4],[9,8,1],[5,4,1],[6,9,1],[3,7,10],
- [10,2,3],[8,9,6],[1,5,9],[4,1,8],[6,4,2],[10,8,6],
- [6,4,8],[4,9,10],[10,5,3],[9,6,1],[6,5,10]
+// --- 內建範例歷史（每期 5 顆） --- 🔵 改 539
+const baseHistory = [
+  [3,11,22,27,38],
+  [5,9,12,19,33],
+  [7,11,20,25,36],
+  [2,4,17,28,31],
+  [1,14,21,29,34]
 ];
-let added = JSON.parse(localStorage.getItem('added')||'[]');
+const LS_KEY="extra539_v1";
+let added = JSON.parse(localStorage.getItem(LS_KEY)||"[]");
 
 function updateStats(){
   const total = baseHistory.length + added.length;
-  const latest = (added.length?added[added.length-1]:baseHistory[baseHistory.length-1]).join(' ');
-  document.getElementById('stats').innerHTML = `📊 目前共有 ${total} 期（含 ${added.length} 期本機新增）<br>最新一期：${latest}`;
+  const latest = (added.length? added[added.length-1]:baseHistory[baseHistory.length-1]).join(" ");
+  stats.innerHTML = `📊 共 ${total} 期，最新：${latest}`;
 }
+updateStats();
+
 function appendLatest(){
-  const v=document.getElementById('latest').value.trim().split(/\s+/).map(Number);
-  if(v.length===3 && v.every(n=>!isNaN(n))){
-    added.push(v);localStorage.setItem('added',JSON.stringify(added));
-    updateStats();alert('已加入到本機歷史！');
-  } else alert('請輸入三個數字，用空格分隔。');
+  const v = latest.value.trim().split(/\s+/).map(Number);
+  if(v.length===5 && v.every(n=>n>=1 && n<=39)){
+    added.push(v);
+    localStorage.setItem(LS_KEY,JSON.stringify(added));
+    latest.value="";
+    updateStats();
+  }else alert("請輸入五個 1~39 的數字");
 }
 function clearAdded(){
-  if(confirm('確定要清除本機新增的期數嗎？')){
-    added=[];localStorage.removeItem('added');updateStats();
+  if(confirm("清除本機新增？")){
+    added=[];
+    localStorage.removeItem(LS_KEY);
+    updateStats();
   }
 }
-function setR(v){alert('示範切換 r='+v);}
-function run(){alert('示範版：此為 UI 展示，可整合運算邏輯。');}
-updateStats();
+function setR(v){document.getElementById("r").value=v;}
+function getAll(){return baseHistory.concat(added);}
+
+// --- 單號權重（含 r + 熱號懲罰） 🔵 改 39 顆 ---
+function singleProbsByR(hist,r,sp){
+  const w = Array(39).fill(0);
+  const n = hist.length;
+  for(let i=0;i<n;i++){
+    const ww=Math.pow(r,n-1-i);
+    for(const x of hist[i]) w[x-1]+=ww;
+  }
+
+  // 熱號連開懲罰 🔵 539 調整
+  if(sp){
+    for(let num=1;num<=39;num++){
+      let c=0, maxc=0;
+      for(let i=0;i<n;i++){
+        if(hist[i].includes(num)){c++;maxc=Math.max(maxc,c);}
+        else c=0;
+      }
+      if(maxc>=3) w[num-1]*=0.75;
+    }
+  }
+
+  const s = w.reduce((a,b)=>a+b,0)||1;
+  return w.map(v=>v/s);
+}
+// --- 產生所有 C(39,5) 組合（優化生成） ---
+function allCombos(){
+  const r=[];
+  for(let a=1;a<=35;a++)
+    for(let b=a+1;b<=36;b++)
+      for(let c=b+1;c<=37;c++)
+        for(let d=c+1;d<=38;d++)
+          for(let e=d+1;e<=39;e++)
+            r.push([a,b,c,d,e]);
+  return r;
+}
+
+// --- 五顆組合機率（乘積模型） ---
+function comboProb(p,t){
+  let s=1;
+  for(let x of t) s*=p[x-1];
+  return s;
+}
+
+// --- 推薦組合計算（含熱號 & 避免重複懲罰） ---
+function computeTopCombos(hist,probs,avoid){
+  const last = hist[hist.length-1];
+  const hotSet = new Set(last);
+  const tri = allCombos();
+  const scored=[];
+
+  for(const t of tri){
+    let sc = comboProb(probs,t);
+
+    // 熱號懲罰 🔵
+    const hotCount = t.filter(x=>hotSet.has(x)).length;
+    if(hotCount===1)sc*=0.95;
+    else if(hotCount===2)sc*=0.90;
+    else if(hotCount===3)sc*=0.80;
+    else if(hotCount===4)sc*=0.65;
+    else if(hotCount===5)sc*=0.55;
+
+    // 避免重複上一期 🔵
+    if(avoid){
+      const dup = t.filter(x=>last.includes(x)).length;
+      if(dup===1) sc*=0.90;
+      else if(dup===2) sc*=0.70;
+      else if(dup===3) sc*=0.45;
+      else if(dup===4) sc*=0.25;
+      else if(dup===5) sc*=0.10;
+    }
+
+    scored.push({t,sc});
+  }
+
+  scored.sort((a,b)=>b.sc-a.sc);
+  return scored.slice(0,10);
+}
+
+// --- 單號排序顯示 ---
+function updateSingleTop(probs){
+  const arr = probs.map((p,i)=>({num:i+1,p})).sort((a,b)=>b.p-a.p);
+  const left = arr.slice(0,20);
+  const right = arr.slice(20,39);
+  singleTop.innerHTML = `
+    <div>${left.map(o=>`<div class="chip"><span class="label">${o.num}</span><span class="value">${(o.p*100).toFixed(2)}%</span></div>`).join("")}</div>
+    <div>${right.map(o=>`<div class="chip"><span class="label">${o.num}</span><span class="value">${(o.p*100).toFixed(2)}%</span></div>`).join("")}</div>
+  `;
+}
+
+// --- 回測（Top5） ---
+function backtest(hist,r,sp,avoid){
+  const rows=[];
+  for(let i=1;i<hist.length-1;i++){
+    const train=hist.slice(0,i+1);
+    const target=hist[i+1];
+    const probs=singleProbsByR(train,r,sp);
+    const top=computeTopCombos(train,probs,avoid).slice(0,5);
+
+    let bestHit=0;
+    const hitList=[];
+    for(const it of top){
+      const hit=it.t.filter(x=>target.includes(x)).length;
+      if(hit>0) hitList.push({t:it.t,hit});
+      bestHit = Math.max(bestHit,hit);
+    }
+
+    rows.push({issue:i+1,target,bestHit,hitList});
+  }
+  return rows;
+}
+
+// --- 命中表渲染 ---
+function renderHits(rows){
+  let html="", c1=0,c2=0,c3=0,c4=0,c5=0;
+  for(const r of rows){
+    if(r.bestHit===1)c1++;
+    if(r.bestHit===2)c2++;
+    if(r.bestHit===3)c3++;
+    if(r.bestHit===4)c4++;
+    if(r.bestHit===5)c5++;
+
+    const comb = r.hitList.length? r.hitList.map(x=>x.t.join(" ")).join("、"):"—";
+    html+=`
+      <tr>
+        <td>第 ${r.issue} 期</td>
+        <td>${r.target.join(" ")}</td>
+        <td>${r.bestHit} 顆</td>
+        <td>${comb}</td>
+      </tr>`;
+  }
+  document.querySelector("#hitTable tbody").innerHTML=html;
+  hitSummary.textContent = `至少中 1 顆：${c1+c2+c3+c4+c5} 期`;
+}
+
+// --- 主程式 ---
+function run(){
+  const hist=getAll();
+  const r=parseFloat(document.getElementById("r").value)||0.8;
+  const sp=document.getElementById("streak").checked;
+  const avoid=document.getElementById("avoid").checked;
+
+  const probs=singleProbsByR(hist,r,sp);
+  updateSingleTop(probs);
+
+  const top10 = computeTopCombos(hist,probs,avoid);
+  toplist.innerHTML = `
+    <div>${top10.slice(0,5).map((o,i)=>`<div class="chip rankTop">
+      <span class="label">Top${i+1}｜${o.t.join(" ")}</span>
+      <span class="value">${(o.sc*100).toFixed(5)}%</span></div>`).join("")}</div>
+    <div>${top10.slice(5,10).map((o,i)=>`<div class="chip">
+      <span class="label">Top${i+6}｜${o.t.join(" ")}</span>
+      <span class="value">${(o.sc*100).toFixed(5)}%</span></div>`).join("")}</div>
+  `;
+
+  // 我的下注
+  const bets=document.getElementById("bets").value.trim();
+  if(!bets){ myres.textContent="尚未輸入下注"; return; }
+  const lines=bets.split(/\n+/);
+  const out=[];
+  for(const l of lines){
+    const t=l.trim().split(/\s+/).map(Number);
+    if(t.length!==5){ out.push(`${l} → 格式錯誤`); continue; }
+    const p=comboProb(probs,t);
+    out.push(`${l} → ${(p*100).toFixed(6)}%`);
+  }
+  myres.textContent=out.join("\n");
+
+  const rows=backtest(hist,r,sp,avoid);
+  renderHits(rows);
+}
 </script>
 </body>
 </html>
