--- a/index.html
+++ b/index.html
@@ -184,44 +184,613 @@ input,textarea,select{
 
 <script>
 // ------------------ Data ----------------------
-const LS_KEY="extra539_v3";
-let added=JSON.parse(localStorage.getItem(LS_KEY)||"[]");
+const LS_KEY = "extra539_v3";
+let added = JSON.parse(localStorage.getItem(LS_KEY) || "[]");
 
-// base history（會用 fetchData.js 自動覆蓋）
-let baseHistory=[
-  [3,11,22,27,38],
-  [5,9,12,19,33],
-  [7,11,20,25,36]
-];
+// ✅ 這裡貼「你剛剛那一大串」從 11/14 到 01/01 的原始文字（不用改格式）
+const RAW_HISTORY = `
+11/14
+25(五)	02, 11, 15, 37, 38
+11/13
+25(四)	13, 18, 20, 23, 36
+11/12
+25(三)	01, 04, 09, 14, 22
+11/11
+25(二)	05, 19, 31, 34, 39
+11/10
+25(一)	07, 14, 15, 17, 30
+11/08
+25(六)	07, 08, 09, 26, 34
+11/07
+25(五)	22, 27, 30, 32, 37
+11/06
+25(四)	07, 24, 28, 31, 32
+11/05
+25(三)	11, 14, 15, 27, 39
+11/04
+25(二)	01, 07, 12, 29, 39
+11/03
+25(一)	24, 25, 34, 36, 37
+11/01
+25(六)	08, 12, 19, 27, 28
+10/31
+25(五)	11, 18, 25, 26, 33
+10/30
+25(四)	05, 27, 28, 31, 37
+10/29
+25(三)	26, 32, 33, 36, 39
+10/28
+25(二)	18, 20, 25, 29, 31
+10/27
+25(一)	03, 20, 26, 31, 37
+10/25
+25(六)	03, 04, 11, 21, 34
+10/24
+25(五)	08, 11, 13, 37, 38
+10/23
+25(四)	08, 15, 27, 37, 38
+10/22
+25(三)	03, 04, 20, 25, 28
+10/21
+25(二)	13, 22, 30, 37, 38
+10/20
+25(一)	06, 13, 22, 23, 27
+10/18
+25(六)	02, 17, 32, 35, 38
+10/17
+25(五)	01, 21, 31, 32, 34
+10/16
+25(四)	04, 18, 21, 30, 37
+10/15
+25(三)	04, 07, 19, 33, 39
+10/14
+25(二)	04, 05, 09, 18, 24
+10/13
+25(一)	08, 13, 14, 22, 36
+10/11
+25(六)	04, 09, 19, 22, 34
+10/10
+25(五)	03, 06, 24, 31, 36
+10/09
+25(四)	02, 04, 12, 15, 29
+10/08
+25(三)	03, 09, 26, 38, 39
+10/07
+25(二)	01, 16, 20, 28, 34
+10/06
+25(一)	03, 05, 06, 12, 13
+10/04
+25(六)	03, 04, 10, 18, 39
+10/03
+25(五)	10, 16, 19, 21, 28
+10/02
+25(四)	10, 19, 25, 36, 39
+10/01
+25(三)	03, 05, 12, 22, 27
+09/30
+25(二)	14, 20, 21, 28, 33
+09/29
+25(一)	03, 15, 21, 29, 37
+09/27
+25(六)	03, 11, 13, 28, 37
+09/26
+25(五)	03, 07, 14, 25, 34
+09/25
+25(四)	02, 10, 13, 28, 32
+09/24
+25(三)	04, 22, 23, 35, 39
+09/23
+25(二)	06, 19, 20, 33, 37
+09/22
+25(一)	07, 09, 12, 14, 33
+09/20
+25(六)	05, 08, 11, 13, 22
+09/19
+25(五)	02, 11, 22, 24, 31
+09/18
+25(四)	05, 12, 14, 23, 33
+09/17
+25(三)	04, 06, 07, 12, 38
+09/16
+25(二)	02, 09, 19, 21, 33
+09/15
+25(一)	07, 09, 10, 12, 28
+09/13
+25(六)	02, 25, 32, 35, 36
+09/12
+25(五)	09, 12, 16, 26, 34
+09/11
+25(四)	06, 18, 26, 28, 36
+09/10
+25(三)	12, 14, 16, 28, 39
+09/09
+25(二)	08, 20, 23, 25, 26
+09/08
+25(一)	07, 11, 20, 28, 38
+09/06
+25(六)	08, 14, 25, 28, 31
+09/05
+25(五)	07, 09, 29, 32, 38
+09/04
+25(四)	06, 07, 24, 27, 34
+09/03
+25(三)	14, 15, 20, 21, 23
+09/02
+25(二)	05, 08, 10, 23, 25
+09/01
+25(一)	21, 24, 28, 29, 35
+08/30
+25(六)	04, 05, 07, 13, 14
+08/29
+25(五)	07, 20, 21, 30, 38
+08/28
+25(四)	05, 07, 21, 23, 29
+08/27
+25(三)	03, 05, 28, 30, 32
+08/26
+25(二)	02, 05, 24, 38, 39
+08/25
+25(一)	06, 12, 15, 23, 26
+08/23
+25(六)	04, 05, 08, 27, 39
+08/22
+25(五)	06, 07, 21, 37, 38
+08/21
+25(四)	16, 27, 28, 29, 33
+08/20
+25(三)	15, 18, 29, 31, 39
+08/19
+25(二)	06, 07, 18, 31, 35
+08/18
+25(一)	09, 12, 18, 27, 29
+08/16
+25(六)	15, 18, 22, 24, 31
+08/15
+25(五)	01, 05, 16, 18, 26
+08/14
+25(四)	10, 12, 14, 31, 35
+08/13
+25(三)	11, 23, 26, 32, 34
+08/12
+25(二)	01, 09, 17, 25, 30
+08/11
+25(一)	01, 14, 22, 26, 28
+08/09
+25(六)	01, 09, 27, 29, 30
+08/08
+25(五)	11, 25, 27, 30, 34
+08/07
+25(四)	10, 20, 28, 30, 37
+08/06
+25(三)	06, 10, 24, 28, 38
+08/05
+25(二)	13, 20, 21, 32, 37
+08/04
+25(一)	03, 21, 23, 25, 26
+08/02
+25(六)	03, 14, 22, 25, 31
+08/01
+25(五)	02, 13, 18, 33, 34
+07/31
+25(四)	11, 12, 17, 34, 36
+07/30
+25(三)	17, 22, 24, 30, 32
+07/29
+25(二)	01, 06, 10, 13, 27
+07/28
+25(一)	04, 16, 22, 23, 30
+07/26
+25(六)	14, 15, 18, 23, 29
+07/25
+25(五)	05, 07, 10, 26, 30
+07/24
+25(四)	02, 06, 09, 29, 32
+07/23
+25(三)	16, 18, 23, 36, 39
+07/22
+25(二)	19, 21, 27, 32, 39
+07/21
+25(一)	01, 06, 11, 22, 34
+07/19
+25(六)	07, 11, 14, 26, 27
+07/18
+25(五)	12, 21, 22, 38, 39
+07/17
+25(四)	04, 06, 11, 29, 37
+07/16
+25(三)	15, 18, 24, 31, 32
+07/15
+25(二)	09, 16, 21, 22, 38
+07/14
+25(一)	08, 11, 12, 29, 36
+07/12
+25(六)	03, 19, 20, 21, 26
+07/11
+25(五)	09, 26, 37, 38, 39
+07/10
+25(四)	02, 03, 04, 34, 36
+07/09
+25(三)	13, 18, 27, 28, 37
+07/08
+25(二)	03, 04, 24, 27, 33
+07/07
+25(一)	14, 25, 27, 35, 38
+07/05
+25(六)	08, 14, 22, 24, 35
+07/04
+25(五)	05, 24, 31, 36, 39
+07/03
+25(四)	10, 21, 22, 26, 27
+07/02
+25(三)	06, 13, 21, 24, 38
+07/01
+25(二)	06, 08, 11, 19, 38
+06/30
+25(一)	07, 08, 11, 23, 31
+06/28
+25(六)	12, 22, 29, 33, 34
+06/27
+25(五)	03, 04, 10, 19, 37
+06/26
+25(四)	01, 06, 13, 24, 29
+06/25
+25(三)	02, 11, 28, 30, 37
+06/24
+25(二)	01, 10, 12, 20, 31
+06/23
+25(一)	03, 14, 22, 31, 38
+06/21
+25(六)	03, 08, 15, 24, 39
+06/20
+25(五)	02, 05, 08, 17, 24
+06/19
+25(四)	12, 14, 15, 17, 24
+06/18
+25(三)	07, 12, 23, 26, 36
+06/17
+25(二)	02, 12, 14, 26, 37
+06/16
+25(一)	06, 08, 09, 33, 36
+06/14
+25(六)	02, 15, 17, 23, 37
+06/13
+25(五)	04, 05, 10, 12, 38
+06/12
+25(四)	11, 14, 15, 19, 32
+06/11
+25(三)	04, 17, 19, 21, 31
+06/10
+25(二)	07, 12, 16, 29, 38
+06/09
+25(一)	08, 20, 27, 29, 30
+06/07
+25(六)	04, 16, 22, 23, 32
+06/06
+25(五)	02, 12, 14, 25, 30
+06/05
+25(四)	07, 14, 19, 35, 39
+06/04
+25(三)	20, 30, 33, 36, 38
+06/03
+25(二)	07, 20, 21, 25, 34
+06/02
+25(一)	02, 07, 11, 16, 21
+05/31
+25(六)	14, 18, 20, 29, 35
+05/30
+25(五)	14, 20, 21, 34, 35
+05/29
+25(四)	04, 18, 28, 30, 31
+05/28
+25(三)	09, 13, 15, 24, 33
+05/27
+25(二)	04, 08, 23, 33, 38
+05/26
+25(一)	08, 15, 21, 24, 34
+05/24
+25(六)	14, 18, 29, 35, 36
+05/23
+25(五)	13, 16, 24, 27, 32
+05/22
+25(四)	01, 08, 17, 21, 35
+05/21
+25(三)	10, 16, 31, 34, 38
+05/20
+25(二)	10, 22, 23, 26, 38
+05/19
+25(一)	04, 07, 14, 25, 35
+05/17
+25(六)	03, 09, 24, 30, 39
+05/16
+25(五)	02, 13, 24, 27, 39
+05/15
+25(四)	02, 04, 15, 25, 36
+05/14
+25(三)	01, 14, 18, 24, 38
+05/13
+25(二)	04, 10, 20, 23, 29
+05/12
+25(一)	08, 10, 26, 27, 38
+05/10
+25(六)	06, 09, 20, 27, 36
+05/09
+25(五)	04, 11, 19, 21, 34
+05/08
+25(四)	07, 10, 26, 28, 33
+05/07
+25(三)	07, 09, 21, 28, 38
+05/06
+25(二)	06, 11, 18, 37, 39
+05/05
+25(一)	04, 05, 08, 10, 11
+05/03
+25(六)	01, 10, 19, 27, 31
+05/02
+25(五)	05, 12, 20, 24, 28
+05/01
+25(四)	08, 19, 25, 27, 39
+04/30
+25(三)	22, 26, 30, 31, 38
+04/29
+25(二)	01, 07, 13, 18, 35
+04/28
+25(一)	06, 12, 17, 38, 39
+04/26
+25(六)	20, 23, 32, 35, 38
+04/25
+25(五)	01, 05, 24, 33, 36
+04/24
+25(四)	04, 06, 25, 29, 35
+04/23
+25(三)	01, 16, 19, 27, 33
+04/22
+25(二)	08, 19, 23, 27, 31
+04/21
+25(一)	02, 06, 12, 14, 24
+04/19
+25(六)	14, 19, 21, 26, 36
+04/18
+25(五)	07, 24, 28, 31, 36
+04/17
+25(四)	03, 06, 23, 24, 37
+04/16
+25(三)	07, 22, 25, 29, 38
+04/15
+25(二)	02, 03, 16, 27, 39
+04/14
+25(一)	09, 10, 22, 30, 33
+04/12
+25(六)	09, 11, 15, 25, 31
+04/11
+25(五)	15, 17, 26, 27, 35
+04/10
+25(四)	14, 19, 22, 26, 28
+04/09
+25(三)	04, 06, 14, 24, 35
+04/08
+25(二)	06, 17, 18, 19, 32
+04/07
+25(一)	01, 06, 19, 26, 33
+04/05
+25(六)	12, 13, 14, 15, 24
+04/04
+25(五)	03, 06, 07, 36, 38
+04/03
+25(四)	05, 16, 23, 31, 39
+04/02
+25(三)	04, 08, 29, 32, 34
+04/01
+25(二)	05, 13, 17, 19, 31
+03/31
+25(一)	07, 10, 13, 23, 26
+03/29
+25(六)	04, 09, 12, 17, 27
+03/28
+25(五)	13, 24, 25, 36, 39
+03/27
+25(四)	05, 25, 33, 36, 37
+03/26
+25(三)	01, 10, 12, 32, 35
+03/25
+25(二)	04, 20, 24, 27, 38
+03/24
+25(一)	07, 25, 32, 34, 35
+03/22
+25(六)	05, 13, 16, 24, 28
+03/21
+25(五)	05, 09, 15, 20, 26
+03/20
+25(四)	02, 16, 17, 27, 32
+03/19
+25(三)	11, 15, 25, 29, 34
+03/18
+25(二)	03, 13, 15, 19, 25
+03/17
+25(一)	07, 11, 13, 26, 30
+03/15
+25(六)	08, 15, 25, 26, 34
+03/14
+25(五)	06, 08, 18, 19, 28
+03/13
+25(四)	03, 04, 07, 11, 30
+03/12
+25(三)	06, 14, 27, 30, 33
+03/11
+25(二)	02, 21, 24, 27, 31
+03/10
+25(一)	02, 04, 07, 25, 37
+03/08
+25(六)	17, 23, 24, 27, 35
+03/07
+25(五)	09, 10, 19, 33, 35
+03/06
+25(四)	08, 12, 15, 18, 34
+03/05
+25(三)	15, 23, 29, 36, 39
+03/04
+25(二)	11, 18, 21, 23, 36
+03/03
+25(一)	08, 09, 12, 22, 27
+03/01
+25(六)	04, 16, 29, 31, 34
+02/28
+25(五)	05, 27, 31, 38, 39
+02/27
+25(四)	11, 12, 20, 28, 29
+02/26
+25(三)	03, 11, 24, 27, 36
+02/25
+25(二)	05, 11, 26, 33, 35
+02/24
+25(一)	08, 17, 18, 24, 36
+02/22
+25(六)	04, 07, 11, 19, 22
+02/21
+25(五)	11, 13, 18, 30, 35
+02/20
+25(四)	03, 07, 17, 24, 27
+02/19
+25(三)	03, 27, 28, 33, 38
+02/18
+25(二)	10, 12, 13, 19, 33
+02/17
+25(一)	09, 15, 29, 30, 39
+02/15
+25(六)	06, 08, 10, 21, 26
+02/14
+25(五)	11, 17, 29, 34, 39
+02/13
+25(四)	02, 07, 11, 20, 30
+02/12
+25(三)	02, 06, 19, 28, 29
+02/11
+25(二)	10, 18, 19, 27, 28
+02/10
+25(一)	12, 22, 26, 28, 35
+02/09
+25(日)	04, 05, 27, 35, 37
+02/08
+25(六)	08, 24, 28, 37, 38
+02/07
+25(五)	16, 21, 26, 29, 37
+02/06
+25(四)	03, 07, 22, 29, 34
+02/05
+25(三)	06, 07, 08, 14, 39
+02/04
+25(二)	01, 08, 16, 19, 31
+02/03
+25(一)	04, 16, 21, 23, 37
+02/02
+25(日)	09, 16, 29, 32, 39
+02/01
+25(六)	01, 10, 23, 32, 37
+01/31
+25(五)	01, 05, 09, 14, 26
+01/30
+25(四)	09, 11, 14, 18, 27
+01/29
+25(三)	04, 11, 25, 31, 32
+01/28
+25(二)	13, 22, 23, 24, 35
+01/27
+25(一)	01, 06, 16, 26, 31
+01/26
+25(日)	07, 08, 09, 17, 20
+01/25
+25(六)	01, 07, 32, 36, 37
+01/24
+25(五)	05, 09, 12, 14, 31
+01/23
+25(四)	04, 07, 17, 22, 35
+01/22
+25(三)	06, 19, 23, 26, 30
+01/21
+25(二)	01, 14, 18, 19, 22
+01/20
+25(一)	03, 12, 19, 32, 34
+01/18
+25(六)	07, 12, 18, 35, 39
+01/17
+25(五)	04, 07, 08, 24, 26
+01/16
+25(四)	09, 13, 23, 29, 34
+01/15
+25(三)	03, 21, 22, 26, 39
+01/14
+25(二)	10, 22, 31, 35, 36
+01/13
+25(一)	04, 12, 28, 35, 38
+01/11
+25(六)	05, 12, 13, 19, 34
+01/10
+25(五)	09, 11, 15, 18, 20
+01/09
+25(四)	02, 08, 19, 21, 29
+01/08
+25(三)	12, 18, 20, 24, 31
+01/07
+25(二)	13, 23, 27, 31, 37
+01/06
+25(一)	07, 21, 22, 27, 35
+01/04
+25(六)	08, 09, 12, 21, 23
+01/03
+25(五)	05, 06, 08, 11, 14
+01/02
+25(四)	12, 26, 30, 32, 33
+01/01
+25(三)	02, 07, 08, 10, 14
+`;
 
-function getAll(){ return baseHistory.concat(added); }
+// 把上面的 RAW_HISTORY 解析成 [[2,11,15,37,38], ...] 這種格式
+function parseRawHistory(raw) {
+  const hist = [];
+  raw.split(/\n/).forEach(line => {
+    const m = line.match(/(\d+),\s*(\d+),\s*(\d+),\s*(\d+),\s*(\d+)/);
+    if (m) {
+      hist.push(m.slice(1).map(Number)); // 只取 5 個號碼
+    }
+  });
+  // 你的原始文字是「最新在最上面」，程式慣例是「最舊在前、最新在最後」
+  // 所以這裡反轉一下，讓 baseHistory[baseHistory.length-1] = 最新一期
+  return hist.reverse();
+}
 
-function updateStats(){
-  const all=getAll();
-  const latest=all[all.length-1]||[];
-  document.getElementById("stats").innerHTML=
+// ✅ 真正給系統用的歷史陣列
+let baseHistory = parseRawHistory(RAW_HISTORY);
+
+function getAll() {
+  return baseHistory.concat(added);
+}
+
+function updateStats() {
+  const all = getAll();
+  const latest = all[all.length - 1] || [];
+  document.getElementById("stats").innerHTML =
     `📊 歷史期數：${all.length}　最新：${latest.join(" ")}`;
 }
 updateStats();
 
-function appendLatest(){
-  const v=latest.value.trim().split(/\s+/).map(Number);
-  if(v.length===5 && v.every(n=>n>=1&&n<=39)){
+function appendLatest() {
+  const v = latest.value.trim().split(/\s+/).map(Number);
+  if (v.length === 5 && v.every(n => n >= 1 && n <= 39)) {
     added.push(v);
-    localStorage.setItem(LS_KEY,JSON.stringify(added));
+    localStorage.setItem(LS_KEY, JSON.stringify(added));
     updateStats();
-    latest.value="";
-  }else alert("五顆 1~39");
+    latest.value = "";
+  } else alert("五顆 1~39");
 }
-function clearAdded(){
-  if(confirm("清除本機新增？")){
-    added=[];
+
+function clearAdded() {
+  if (confirm("清除本機新增？")) {
+    added = [];
     localStorage.removeItem(LS_KEY);
     updateStats();
   }
 }
-function setR(v){document.getElementById("r").value=v;}
 
+function setR(v) { document.getElementById("r").value = v; }
 
 // ------------------ WebWorker ----------------------
 const worker=new Worker("worker.js");
